--- a/certification.html
+++ b/certification.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>IDEKO - Personal Blog TailwindCSS Template</title>
+  <title>GENEXT</title>
   <link rel="icon" href="assets/imgs/template/favicon.svg" type="image/svg+xml" />
   <script src="assets/js/vendors/color-modes.js"></script>
   <link rel="preconnect" href="https://fonts.bunny.net">
@@ -352,7 +352,7 @@
 
   <section class="relative pt-20 lg:pt-24">
     <div class="container px-4">
-      <h1 class="heading-1">Hey, we’re Ideko. <span class="font-light">See our thoughts, stories & </span>ideas.</h1>
+      <h1 class="heading-1">Hey, we’re GeNext. <span class="font-light">See our thoughts, stories & </span>ideas.</h1>
     </div>
   </section>
 
