--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>IDEKO - Personal Blog TailwindCSS Template</title>
+  <title>GENEXT</title>
   <link rel="icon" href="assets/imgs/template/favicon.svg" type="image/svg+xml" />
   <script src="assets/js/vendors/color-modes.js"></script>
   <link rel="preconnect" href="https://fonts.bunny.net">
@@ -26,40 +26,13 @@
         </a>
       </h1>
       <ul class="xl:flex hidden">
-        <li class="relative group">
-          <a class="menu-item" href="index.html">Home</a>
-          <ul class="z-100 absolute px-6 py-4 rounded-md left-4 bg-neutral-0 dark:bg-neutral-dark-0 min-w-48 shadow-sm mt-8 opacity-0 invisible group-hover:opacity-100 group-hover:visible group-hover:mt-4 transition-all duration-500">
-            <li><a href="index.html" class="menu-sub-item">Home page 01</a></li>
-            <li><a href="index-2.html" class="menu-sub-item">Home page 02</a></li>
-            <li><a href="index-3.html" class="menu-sub-item">Home page 03</a></li>
-          </ul>
-        </li>
-        <li class="relative group">
-          <a class="menu-item" href="#">Blog</a>
-          <ul class="z-100 absolute px-6 py-4 rounded-md left-4 bg-neutral-0 dark:bg-neutral-dark-0 min-w-48 shadow-sm mt-8 opacity-0 invisible group-hover:opacity-100 group-hover:visible group-hover:mt-4 transition-all duration-500">
-            <li><a href="category.html" class="menu-sub-item">Category 01</a></li>
-            <li><a href="category-2.html" class="menu-sub-item">Category 02</a></li>
-            <li><a href="category-3.html" class="menu-sub-item">Category 03</a></li>
-            <li><a href="category-4.html" class="menu-sub-item">Category 04</a></li>
-            <li><a href="single.html" class="menu-sub-item">Single 01</a></li>
-            <li><a href="single-2.html" class="menu-sub-item">Single 02</a></li>
-          </ul>
-        </li>
-        <li class="relative group">
-          <a class="menu-item" href="#">Pages</a>
-          <ul class="z-100 absolute px-6 py-4 rounded-md left-4 bg-neutral-0 dark:bg-neutral-dark-0 min-w-48 shadow-sm mt-8 opacity-0 invisible group-hover:opacity-100 group-hover:visible group-hover:mt-4 transition-all duration-500">
-            <li><a href="page-about.html" class="menu-sub-item">About me</a></li>
-            <li><a href="page-author.html" class="menu-sub-item">Author</a></li>
-            <li><a href="page-search.html" class="menu-sub-item">Search Results</a></li>
-            <li><a href="page-contact.html" class="menu-sub-item">Contact</a></li>
-            <li><a href="page-login.html" class="menu-sub-item">Login</a></li>
-            <li><a href="page-register.html" class="menu-sub-item">Register</a></li>
-            <li><a href="page-forgot-password.html" class="menu-sub-item">Forgot Password</a></li>
-            <li><a href="page-404.html" class="menu-sub-item">Error 404</a></li>
-          </ul>
-        </li>
+        
+        <li class="relative"><a href="index.html" class="menu-item">Home</a></li>
+
+        <li class="relative"><a href="certification.html" class="menu-item">Certification</a></li>
+        <li class="relative"><a href="page-about.html" class="menu-item">About Us</a></li>
         <li class="group">
-          <a href="#" class="menu-item group-hover:border-white">Features</a>
+          <a href="#" class="menu-item group-hover:border-white">News & Stories</a>
           <!-- MEGA MENU CONTENT -->
           <div class="w-full px-12 py-12 rounded-2xl bg-neutral-0 dark:bg-neutral-dark-0 shadow-sm absolute top-full left-0 mt-8 opacity-0 invisible group-hover:opacity-100 group-hover:visible group-hover:mt-4 transition-all duration-500">
             <h3 class="text-5xl mb-8 text-neutral-950 dark:text-neutral-dark-950">Featured <span class="font-bold">Posts</span></h3>
@@ -919,7 +892,7 @@
         </div>
       </div>
       <div class="pt-8">
-        <p class="text-sm text-neutral-700 dark:text-neutral-dark-700">© IDEKO 2024. Designed by <a href="https://alithemes.com" class="text-neutral-950 dark:text-neutral-dark-950">Alithemes</a></p>
+        <p class="text-sm text-neutral-700 dark:text-neutral-dark-700">© Genext Group 2024. Designed by <a target="_blank" href="https://story-x.co.uk/" class="text-neutral-950 dark:text-neutral-dark-950">StoryX</a></p>
       </div>
     </div>
   </footer>
