--- a/certification.html
+++ b/certification.html
@@ -26,40 +26,13 @@
         </a>
       </h1>
       <ul class="xl:flex hidden">
-        <li class="relative group">
-          <a class="menu-item" href="index.html">Home</a>
-          <ul class="z-100 absolute px-6 py-4 rounded-md left-4 bg-neutral-0 dark:bg-neutral-dark-0 min-w-48 shadow-sm mt-8 opacity-0 invisible group-hover:opacity-100 group-hover:visible group-hover:mt-4 transition-all duration-500">
-            <li><a href="index.html" class="menu-sub-item">Home page 01</a></li>
-            <li><a href="index-2.html" class="menu-sub-item">Home page 02</a></li>
-            <li><a href="index-3.html" class="menu-sub-item">Home page 03</a></li>
-          </ul>
-        </li>
-        <li class="relative group">
-          <a class="menu-item" href="#">Blog</a>
-          <ul class="z-100 absolute px-6 py-4 rounded-md left-4 bg-neutral-0 dark:bg-neutral-dark-0 min-w-48 shadow-sm mt-8 opacity-0 invisible group-hover:opacity-100 group-hover:visible group-hover:mt-4 transition-all duration-500">
-            <li><a href="category.html" class="menu-sub-item">Category 01</a></li>
-            <li><a href="category-2.html" class="menu-sub-item">Category 02</a></li>
-            <li><a href="category-3.html" class="menu-sub-item">Category 03</a></li>
-            <li><a href="category-4.html" class="menu-sub-item">Category 04</a></li>
-            <li><a href="single.html" class="menu-sub-item">Single 01</a></li>
-            <li><a href="single-2.html" class="menu-sub-item">Single 02</a></li>
-          </ul>
-        </li>
-        <li class="relative group">
-          <a class="menu-item" href="#">Pages</a>
-          <ul class="z-100 absolute px-6 py-4 rounded-md left-4 bg-neutral-0 dark:bg-neutral-dark-0 min-w-48 shadow-sm mt-8 opacity-0 invisible group-hover:opacity-100 group-hover:visible group-hover:mt-4 transition-all duration-500">
-            <li><a href="page-about.html" class="menu-sub-item">About me</a></li>
-            <li><a href="page-author.html" class="menu-sub-item">Author</a></li>
-            <li><a href="page-search.html" class="menu-sub-item">Search Results</a></li>
-            <li><a href="page-contact.html" class="menu-sub-item">Contact</a></li>
-            <li><a href="page-login.html" class="menu-sub-item">Login</a></li>
-            <li><a href="page-register.html" class="menu-sub-item">Register</a></li>
-            <li><a href="page-forgot-password.html" class="menu-sub-item">Forgot Password</a></li>
-            <li><a href="page-404.html" class="menu-sub-item">Error 404</a></li>
-          </ul>
-        </li>
+        
+        <li class="relative"><a href="index.html" class="menu-item">Home</a></li>
+
+        <li class="relative"><a href="certification.html" class="menu-item">Certification</a></li>
+        <li class="relative"><a href="page-about.html" class="menu-item">About Us</a></li>
         <li class="group">
-          <a href="#" class="menu-item group-hover:border-white">Features</a>
+          <a href="#" class="menu-item group-hover:border-white">News & Stories</a>
           <!-- MEGA MENU CONTENT -->
           <div class="w-full px-12 py-12 rounded-2xl bg-neutral-0 dark:bg-neutral-dark-0 shadow-sm absolute top-full left-0 mt-8 opacity-0 invisible group-hover:opacity-100 group-hover:visible group-hover:mt-4 transition-all duration-500">
             <h3 class="text-5xl mb-8 text-neutral-950 dark:text-neutral-dark-950">Featured <span class="font-bold">Posts</span></h3>
@@ -218,7 +191,7 @@
           <img src="assets/imgs/template/icon-dark-light.svg" alt="dark/light" class="dark:hidden">
           <img src="assets/imgs/template/icon-dark-light-white.svg" alt="dark/light" class="hidden dark:inline-block">
         </div>
-        <div class="search-box flex relative py-4 z-20">
+        <!-- <div class="search-box flex relative py-4 z-20">
           <div class="search-icon cursor-pointer flex pr-2">
             <img src="assets/imgs/template/icon-search.svg" alt="dark/light" class="flex-shrink-0 relative dark:hidden">
             <img src="assets/imgs/template/icon-search-white.svg" alt="dark/light" class="flex-shrink-0 relative hidden dark:inline-block">
@@ -256,7 +229,7 @@
               </div>
             </div>
           </div>
-        </div>
+        </div> -->
 
         <div class="py-4 hover-up xl:flex hidden relative z-20">
           <a class="btn-primary" href="page-login.html">
@@ -287,39 +260,10 @@
                 </a>
               </h1>
               <ul class="py-6 mb-6 border-y border-neutral-300 dark:border-neutral-dark-300">
-                <li class="has-children">
-                  <a class="menu-mobile-item" href="#">Home</a>
-                  <ul class="sub-menu">
-                    <li><a class="menu-mobile-sub-item" href="index.html">Home page 01</a></li>
-                    <li><a class="menu-mobile-sub-item" href="index-2.html">Home page 02</a></li>
-                    <li><a class="menu-mobile-sub-item" href="index-3.html">Home page 03</a></li>
-                  </ul>
-                </li>
-                <li class="has-children">
-                  <a class="menu-mobile-item" href="#">Blog</a>
-                  <ul class="sub-menu">
-                    <li><a href="category.html" class="menu-mobile-sub-item">Category 01</a></li>
-                    <li><a href="category-2.html" class="menu-mobile-sub-item">Category 02</a></li>
-                    <li><a href="category-3.html" class="menu-mobile-sub-item">Category 03</a></li>
-                    <li><a href="category-4.html" class="menu-mobile-sub-item">Category 04</a></li>
-                    <li><a href="single.html" class="menu-mobile-sub-item">Single 01</a></li>
-                    <li><a href="single-2.html" class="menu-mobile-sub-item">Single 02</a></li>
-                  </ul>
-                </li>
-                <li class="has-children">
-                  <a class="menu-mobile-item" href="#">Pages</a>
-                  <ul class="sub-menu">
-                    <li><a href="page-about.html" class="menu-mobile-sub-item">About me</a></li>
-                    <li><a href="page-author.html" class="menu-mobile-sub-item">Author</a></li>
-                    <li><a href="page-search.html" class="menu-mobile-sub-item">Search Results</a></li>
-                    <li><a href="page-contact.html" class="menu-mobile-sub-item">Contact</a></li>
-                    <li><a href="page-login.html" class="menu-mobile-sub-item">Login</a></li>
-                    <li><a href="page-register.html" class="menu-mobile-sub-item">Register</a></li>
-                    <li><a href="page-forgot-password.html" class="menu-mobile-sub-item">Forgot Password</a></li>
-                    <li><a href="page-404.html" class="menu-mobile-sub-item">Error 404</a></li>
-                  </ul>
-                </li>
+                <li><a class="menu-mobile-item" href="page-about.html">Home</a></li>
                 <li><a class="menu-mobile-item" href="page-about.html">About</a></li>
+                <li><a class="menu-mobile-item" href="certification.html">Certification</a></li> 
+                <li><a class="menu-mobile-item" href="category.html">News & Stories</a></li>
                 <li><a class="menu-mobile-item" href="page-contact.html">Contact</a></li>
               </ul>
               <div class="flex flex-wrap flex-col mt-4">
