--- a/page-contact.html
+++ b/page-contact.html
@@ -409,8 +409,8 @@
           </div>
           <div class="mt-4">
             <h6 class="text-2xl font-bold text-neutral-950 dark:text-neutral-dark-950 mb-2">Send Email</h6>
-            <p class="text-base font-medium text-neutral-700 dark:text-neutral-dark-700 mb-0">contact@ideko.com</p>
-            <p class="text-base font-medium text-neutral-700 dark:text-neutral-dark-700 mb-0">support@ideko.com</p>
+            <p class="text-base font-medium text-neutral-700 dark:text-neutral-dark-700 mb-0">contact@genext.io</p>
+            <p class="text-base font-medium text-neutral-700 dark:text-neutral-dark-700 mb-0">support@genext.io</p>
           </div>
         </div>
         <div class="flex flex-col item-center justify-center text-center">
@@ -435,8 +435,8 @@
           </div>
           <div class="mt-4">
             <h6 class="text-2xl font-bold text-neutral-950 dark:text-neutral-dark-950 mb-2">Office</h6>
-            <p class="text-base font-medium text-neutral-700 dark:text-neutral-dark-700 mb-0">4517 Washington Ave. </p>
-            <p class="text-base font-medium text-neutral-700 dark:text-neutral-dark-700 mb-0">Manchester, Kentucky 39495</p>
+            <p class="text-base font-medium text-neutral-700 dark:text-neutral-dark-700 mb-0">Unit 82a James Carter Road, Mildenhall,</p>
+            <p class="text-base font-medium text-neutral-700 dark:text-neutral-dark-700 mb-0">Bury St. Edmunds, England, IP28 7DE</p>
           </div>
         </div>
       </div>
