--- a/single.html
+++ b/single.html
@@ -523,7 +523,7 @@
               Subscribe Us
             </h4>
             <p class="font-medium text-neutral-700 dark:text-neutral-dark-700 mb-4 lg:mb-8 max-w-[350px]">
-              Get the latest creative news from IDEKO magazine
+              Get the latest creative news from Subscribe to The Beanstalk for priority</span> news, reviews and updates on giant slaying.magazine
             </p>
             <form class="max-w-full overflow-hidden" action="">
               <div class="flex flex-col md:flex-row mb-4 md:bg-neutral-0 dark:bg-neutral-dark-200 border border-neutral-950 dark:border-neutral-700 rounded-xl overflow-hidden">
