--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
           <img src="assets/imgs/template/icon-dark-light.svg" alt="dark/light" class="dark:hidden">
           <img src="assets/imgs/template/icon-dark-light-white.svg" alt="dark/light" class="hidden dark:inline-block">
         </div>
-        <div class="search-box flex relative py-4 z-20">
+        <!-- <div class="search-box flex relative py-4 z-20">
           <div class="search-icon cursor-pointer flex pr-2">
             <img src="assets/imgs/template/icon-search.svg" alt="dark/light" class="flex-shrink-0 relative dark:hidden">
             <img src="assets/imgs/template/icon-search-white.svg" alt="dark/light" class="flex-shrink-0 relative hidden dark:inline-block">
@@ -229,7 +229,7 @@
               </div>
             </div>
           </div>
-        </div>
+        </div> -->
 
         <div class="py-4 hover-up xl:flex hidden relative z-20">
           <a class="btn-primary" href="page-login.html">
@@ -260,39 +260,10 @@
                 </a>
               </h1>
               <ul class="py-6 mb-6 border-y border-neutral-300 dark:border-neutral-dark-300">
-                <li class="has-children">
-                  <a class="menu-mobile-item" href="#">Home</a>
-                  <ul class="sub-menu">
-                    <li><a class="menu-mobile-sub-item" href="index.html">Home page 01</a></li>
-                    <li><a class="menu-mobile-sub-item" href="index-2.html">Home page 02</a></li>
-                    <li><a class="menu-mobile-sub-item" href="index-3.html">Home page 03</a></li>
-                  </ul>
-                </li>
-                <li class="has-children">
-                  <a class="menu-mobile-item" href="#">Blog</a>
-                  <ul class="sub-menu">
-                    <li><a href="category.html" class="menu-mobile-sub-item">Category 01</a></li>
-                    <li><a href="category-2.html" class="menu-mobile-sub-item">Category 02</a></li>
-                    <li><a href="category-3.html" class="menu-mobile-sub-item">Category 03</a></li>
-                    <li><a href="category-4.html" class="menu-mobile-sub-item">Category 04</a></li>
-                    <li><a href="single.html" class="menu-mobile-sub-item">Single 01</a></li>
-                    <li><a href="single-2.html" class="menu-mobile-sub-item">Single 02</a></li>
-                  </ul>
-                </li>
-                <li class="has-children">
-                  <a class="menu-mobile-item" href="#">Pages</a>
-                  <ul class="sub-menu">
-                    <li><a href="page-about.html" class="menu-mobile-sub-item">About me</a></li>
-                    <li><a href="page-author.html" class="menu-mobile-sub-item">Author</a></li>
-                    <li><a href="page-search.html" class="menu-mobile-sub-item">Search Results</a></li>
-                    <li><a href="page-contact.html" class="menu-mobile-sub-item">Contact</a></li>
-                    <li><a href="page-login.html" class="menu-mobile-sub-item">Login</a></li>
-                    <li><a href="page-register.html" class="menu-mobile-sub-item">Register</a></li>
-                    <li><a href="page-forgot-password.html" class="menu-mobile-sub-item">Forgot Password</a></li>
-                    <li><a href="page-404.html" class="menu-mobile-sub-item">Error 404</a></li>
-                  </ul>
-                </li>
+                <li><a class="menu-mobile-item" href="page-about.html">Home</a></li>
                 <li><a class="menu-mobile-item" href="page-about.html">About</a></li>
+                <li><a class="menu-mobile-item" href="certification.html">Certification</a></li> 
+                <li><a class="menu-mobile-item" href="category.html">News & Stories</a></li>
                 <li><a class="menu-mobile-item" href="page-contact.html">Contact</a></li>
               </ul>
               <div class="flex flex-wrap flex-col mt-4">
@@ -319,6 +290,12 @@
       </div>
     </div>
   </header>
+
+
+
+
+
+  
   <!--Hero 1-->
   <section class="relative py-20 lg:py-24 lg:mb-16">
     <div class="container px-4">
@@ -780,7 +757,7 @@
   <section class="relative py-20 lg:py-24">
     <div class="container px-4">
       <div class="grid flex-col justify-center justify-items-center align-center mb-16">
-        <h3 class="heading-3 text-center mb-12 md:w-2/3 leading-tight"><span class="font-light">Subscribe to my weekly newsletter for priority</span> news, reviews and updates</h3>
+        <h3 class="heading-3 text-center mb-12 md:w-2/3 leading-tight"><span class="font-light">Subscribe to The Beanstalk for priority</span> news, reviews and updates on giant slaying.</h3>
         <div>
           <form class="max-w-full overflow-hidden" action="">
             <div class="flex flex-col md:flex-row mb-4 md:bg-neutral-0 dark:bg-neutral-dark-200 rounded-full p-1 md:border border-neutral-300 dark:border-neutral-dark-300">
