--- a/index.html
+++ b/index.html
@@ -291,7 +291,14 @@
     </div>
   </header>
 
-
+<!--Hero 1-->
+<section class="relative py-20 lg:py-24 lg:mb-16">
+  <div class="container px-4">
+    <h1 class="heading-1">Welcome to GeNext.<span class="font-light"><br>Next Generation Business Accreditation.</span></h1>
+   
+    <img src="assets/imgs/pages/img-29.png" alt="" class="mt-12 rounded-3xl">
+  </div>
+</section>
 
 
 
@@ -385,7 +392,7 @@
   <!--Home 1 Section 1 -->
   <section class="relative pt-20 py-10 lg:pt-12 lg:pb-24">
     <div class="container px-4">
-      <h3 class="heading-2 text-center mb-16"><span class="font-light">See what we’ve</span><br> written lately</h3>
+      <h3 class="heading-2 text-center mb-16"><span class="font-light">Latest News</span><br> & Stories</h3>
       <!--Post list 1-->
       <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-x-[30px] gap-y-[65px]">
         <div class="flex-col justify-start items-start gap-5 inline-flex hover-up">
