--- a/deb.html
+++ b/deb.html
@@ -252,6 +252,7 @@
 <section class="relative py-20 lg:py-24 lg:mb-16">
   <div class="container px-4">
     <h1 class="heading-1">Welcome Debashish<span class="font-light"><br>This is your golden ticket.</span></h1>
+    <h2 class="heading-2">You have been selected to be certified GeNext (this is just an example)</h2>
    
     <img src="assets/imgs/pages/img-29.png" alt="" class="mt-12 rounded-3xl">
   </div>
