--- a/index.html
+++ b/index.html
@@ -30,10 +30,11 @@
 
         <li class="relative"><a href="index.html" class="menu-item">Home</a></li>
 
-        <li class="relative"><a href="certification.html" class="menu-item">Certification</a></li>
-        <li class="relative"><a href="page-about.html" class="menu-item">About Us</a></li>
-        <li class="relative"><a href="certification.html" class="menu-item">Latest News & Stories</a></li>
-        <li class="relative"><a href="page-contact.html" class="menu-item">Contact</a></li>
+        
+        <li class="relative"><a href="#about" class="menu-item">About Us</a></li>
+        <li class="relative"><a href="#news" class="menu-item">Latest News & Stories</a></li>
+        <li class="relative"><a href="#certification" class="menu-item">Certification</a></li>
+        <!-- <li class="relative"><a href="page-contact.html" class="menu-item">Contact</a></li> -->
       </ul>
       <div class="flex justify-end align-middle content-center items-center relative gap-4">
 
@@ -168,14 +169,20 @@
   </section>
 
 
-  <section class="py-16 lg:py-24">
+  <section id="about" class="py-16 lg:py-24">
     <div class="container px-4">
       <div class="md:w-3/4 lg:w-1/2">
         <h1 class="heading-2 max-w-7xl mb-12 text-neutral-950 dark:text-neutral-dark-950"><span
             class="font-light">Genext</span> Certification <span class="font-light">Certification goes</span><br> beyond
-          <span class="font-light">the ordinary.</span></h1>
-        <p class="mb-8 text-base font-md text-neutral-950 dark:text-neutral-dark-950">We evaluate your entire social and environmental footprint—from your supply chain and input materials to charitable contributions and employee benefits. Genext Certification ensures your business meets the highest standards of performance, transparency, and accountability.</p>
-        <p class="mb-8 text-base font-md text-neutral-950 dark:text-neutral-dark-950">Genext Certification is tailor-made for SMEs. If you operate for profit and have been in business for at least 12 months, you're eligible.</p>
+          <span class="font-light">the ordinary.</span>
+        </h1>
+        <p class="mb-8 text-base font-md text-neutral-950 dark:text-neutral-dark-950">We evaluate your entire social and
+          environmental footprint—from your supply chain and input materials to charitable contributions and employee
+          benefits. Genext Certification ensures your business meets the highest standards of performance, transparency,
+          and accountability.</p>
+        <p class="mb-8 text-base font-md text-neutral-950 dark:text-neutral-dark-950">Genext Certification is
+          tailor-made for SMEs. If you operate for profit and have been in business for at least 12 months, you're
+          eligible.</p>
       </div>
       <!-- <div class="grid md:grid-col-2 lg:grid-cols-4 mt-24">
       <div class="flex flex-col">
@@ -213,7 +220,7 @@
 
 
   <!--Home 1 Section 1 -->
-  <section class="relative pt-20 py-10 lg:pt-12 lg:pb-24">
+  <section id="news" class="relative pt-20 py-10 lg:pt-12 lg:pb-24">
     <div class="container px-4">
       <div class="border-t border-neutral-950 dark:border-neutral-dark-500 pb-20 "></div>
       <h3 class="heading-2 text-center mb-16"><span class="font-light">Latest News</span><br> & Stories</h3>
@@ -390,13 +397,14 @@
 
 
   <!--Hero 1-->
-  <section class="relative py-20 lg:py-24 lg:mb-16">
+  <section id="certification" class="relative py-20 lg:py-24 lg:mb-16">
     <div class="container px-4">
       <h1 class="heading-1">Genext <span class="font-light">Certification</span></h1>
       <div class="flex justify-between items-center gap-8 lg:gap-32 mt-12 flex-col lg:flex-row">
-        <p class="text-neutral-950 dark:text-neutral-dark-950 text-base font-medium lg:w-2/4">Goods and services. It
-          involves entrepreneurship, management, marketing, finance, and many other aspects. Businesses aim to generate
-          profit while meeting</p>
+        <p class="text-neutral-950 dark:text-neutral-dark-950 text-base font-medium lg:w-2/4">Genext Certification is
+          tailor-made for SMEs. If you operate for profit and have been in business for at least 12 months, you're
+          eligible. Dive into our straightforward 7-step guide and become part of the elite group of businesses making a
+          real difference.</p>
 
       </div>
       <div class="swiper-container post-slider-4">
