--- a/index.html
+++ b/index.html
@@ -162,7 +162,8 @@
   <!--Hero 1-->
   <section class="relative py-20 lg:py-24 lg:mb-6">
     <div class="container px-4">
-      <h1 class="heading-1">Welcome to GeNext.</h1>
+      <h1 class="heading-1"><span
+        class="font-light">Welcome to </span>GeNext.</h1>
 
       <img src="assets/imgs/pages/img-29.png" alt="" class="mt-12 rounded-3xl">
     </div>
@@ -337,8 +338,7 @@
               </a>
             </h1>
             <p class="font-medium text-neutral-950 dark:text-neutral-dark-950 mb-8 lg:mb-12 max-w-[350px]">
-              It involves entrepreneurship, management, marketing, finance, and many other aspects. Businesses aim to
-              generate
+              It involves entrepreneurship, management, marketing, finance, and many other aspects. Become a certified Genext Business.
             </p>
             <div class="flex gap-2">
               <div
@@ -373,8 +373,8 @@
 
           <!-- Banner box -->
           <div class="flex flex-col gap-4">
-            <h4 class="text-2xl text-neutral-950 font-bold dark:text-neutral-dark-950">Sponsored <span
-                class="font-light">Ads</span></h4>
+            <h4 class="text-2xl text-neutral-950 font-bold dark:text-neutral-dark-950">Launch <span
+                class="font-light">September 2024</span></h4>
             <div class="w-72 h-96 relative rounded-2xl">
               <img class="w-72 h-96 left-0 top-0 absolute rounded-2xl" src="assets/imgs/pages/banner1.png" />
               <div
@@ -395,6 +395,36 @@
     </div>
   </section>
 
+  <!-- Category 1 Section 3 -->
+  <section class="relative pt-20 py-10 lg:pt-12 lg:pb-24">
+    <div class="container px-4">
+      <div class="mx-auto grid lg:grid-cols-2 gap-8 lg:gap-16 items-center justify-center max-w-[1070px] bg-primary-light-300 dark:bg-primary-dark-300 rounded-3xl px-8 py-12 md:px-16 md:py-24 overflow-hidden relative">
+        <h2 class="text-5xl leading-tight md:text-6xl lg:text-6xl font-bold text-neutral-950 dark:text-neutral-dark-950 mb-0"><span class="font-light">Let's</span> explore, share, and inspire <span class="font-light">together!</span></h2>
+        <div class="flex flex-col gap-8">
+          <p class="text-lg font-medium text-neutral-700 dark:text-neutral-dark-300">Ready to dive into the blend of tech, fashion, and lifestyle? Join our vibrant community and be part of the conversation.</p>
+          <div class="flex flex-col md:flex-row gap-4">
+            <a href="page-login.html" class="group btn bg-primary-light-950 dark:bg-primary-dark-950 rounded-full px-8 py-4 text-xl text-neutral-950 dark:text-neutral-dark-950 flex gap-2 items-center">
+              <span>Get Started</span>
+              <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" class="fill-neutral-950 dark:fill-neutral-dark-950 group-hover:translate-x-1 transition-all duration-300">
+                <g clip-path="url(#clip0_253_4238)">
+                  <path d="M23.6164 11.0663L14.9491 2.39884C14.7017 2.15143 14.372 2.01562 14.0204 2.01562C13.6684 2.01562 13.3388 2.15162 13.0914 2.39884L12.3045 3.18596C12.0573 3.43298 11.9211 3.76293 11.9211 4.11473C11.9211 4.46634 12.0573 4.80741 12.3045 5.05443L17.3608 10.1219H1.29657C0.572288 10.1219 0 10.6889 0 11.4134V12.5262C0 13.2507 0.572288 13.8748 1.29657 13.8748H17.4182L12.3047 18.9706C12.0575 19.218 11.9213 19.539 11.9213 19.8908C11.9213 20.2422 12.0575 20.5679 12.3047 20.8151L13.0916 21.5997C13.339 21.8471 13.6686 21.9819 14.0206 21.9819C14.3722 21.9819 14.7019 21.8453 14.9493 21.5979L23.6166 12.9307C23.8646 12.6825 24.001 12.3512 24 11.999C24.0008 11.6456 23.8646 11.3141 23.6164 11.0663Z"></path>
+                </g>
+                <defs>
+                  <clipPath id="clip0_253_4238">
+                    <rect width="24" height="24"></rect>
+                  </clipPath>
+                </defs>
+              </svg>
+            </a>
+            <a href="page-contact.html" class="btn border border-neutral-950 dark:bg-neutral-dark-0 rounded-full px-8 py-4 text-xl text-neutral-950 dark:text-neutral-dark-950 items-center">Contact Us</a>
+          </div>
+        </div>
+        <img src="assets/imgs/template/shape-1.svg" alt="" class="absolute top-0 left-0 opacity-10 ">
+        <img src="assets/imgs/template/shape-2.svg" alt="" class="absolute bottom-0 right-0 opacity-10 ">
+      </div>
+    </div>
+  </section>
+
 
   <!--Hero 1-->
   <section id="certification" class="relative py-20 lg:py-24 lg:mb-16">
@@ -403,8 +433,7 @@
       <div class="flex justify-between items-center gap-8 lg:gap-32 mt-12 flex-col lg:flex-row">
         <p class="text-neutral-950 dark:text-neutral-dark-950 text-base font-medium lg:w-2/4">Genext Certification is
           tailor-made for SMEs. If you operate for profit and have been in business for at least 12 months, you're
-          eligible. Dive into our straightforward 7-step guide and become part of the elite group of businesses making a
-          real difference.</p>
+          eligible. Dive into our straightforward 6-step guide and become part of the community of businesses making a difference.</p>
 
       </div>
       <div class="swiper-container post-slider-4">
@@ -416,7 +445,7 @@
               <div
                 class="px-[13px] py-[9px] left-[10px] top-[150px] absolute bg-neutral-0 dark:bg-neutral-dark-0 rounded-[26px] justify-center items-center gap-2.5 inline-flex">
                 <a href="category.html"
-                  class="text-neutral-950 dark:text-neutral-dark-950 text-sm font-medium">Governance</a>
+                  class="text-neutral-950 dark:text-neutral-dark-950 text-sm font-medium">Eligibility</a>
                 <div class="w-[22px] h-[22px] relative">
                   <div class="w-7 h-7 left-[-3px] top-[-3px] absolute bg-primary-light-950 rounded-full"></div>
 
@@ -431,7 +460,7 @@
               <div
                 class="px-[13px] py-[9px] left-[10px] top-[150px] absolute bg-neutral-0 dark:bg-neutral-dark-0 rounded-[26px] justify-center items-center gap-2.5 inline-flex">
                 <a href="category.html"
-                  class="text-neutral-950 dark:text-neutral-dark-950 text-sm font-medium">Trending</a>
+                  class="text-neutral-950 dark:text-neutral-dark-950 text-sm font-medium">Pricing</a>
                 <div class="w-[22px] h-[22px] relative">
                   <div class="w-7 h-7 left-[-3px] top-[-3px] absolute bg-primary-light-950 rounded-full"></div>
 
@@ -446,7 +475,7 @@
               <div
                 class="px-[13px] py-[9px] left-[10px] top-[150px] absolute bg-neutral-0 dark:bg-neutral-dark-0 rounded-[26px] justify-center items-center gap-2.5 inline-flex">
                 <a href="category.html"
-                  class="text-neutral-950 dark:text-neutral-dark-950 text-sm font-medium">Fashion</a>
+                  class="text-neutral-950 dark:text-neutral-dark-950 text-sm font-medium">Assessment</a>
                 <div class="w-[22px] h-[22px] relative">
                   <div class="w-7 h-7 left-[-3px] top-[-3px] absolute bg-primary-light-950 rounded-full"></div>
 
@@ -461,7 +490,7 @@
               <div
                 class="px-[13px] py-[9px] left-[10px] top-[150px] absolute bg-neutral-0 dark:bg-neutral-dark-0 rounded-[26px] justify-center items-center gap-2.5 inline-flex">
                 <a href="category.html"
-                  class="text-neutral-950 dark:text-neutral-dark-950 text-sm font-medium">Technology</a>
+                  class="text-neutral-950 dark:text-neutral-dark-950 text-sm font-medium">Review</a>
                 <div class="w-[22px] h-[22px] relative">
                   <div class="w-7 h-7 left-[-3px] top-[-3px] absolute bg-primary-light-950 rounded-full"></div>
 
@@ -476,7 +505,22 @@
               <div
                 class="px-[13px] py-[9px] left-[10px] top-[150px] absolute bg-neutral-0 dark:bg-neutral-dark-0 rounded-[26px] justify-center items-center gap-2.5 inline-flex">
                 <a href="category.html"
-                  class="text-neutral-950 dark:text-neutral-dark-950 text-sm font-medium">Travel</a>
+                  class="text-neutral-950 dark:text-neutral-dark-950 text-sm font-medium">Report</a>
+                <div class="w-[22px] h-[22px] relative">
+                  <div class="w-7 h-7 left-[-3px] top-[-3px] absolute bg-primary-light-950 rounded-full"></div>
+
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="swiper-slide hover-up">
+            <div class="w-full h-52 relative rounded-3xl overflow-hidden">
+              <a href="category.html"><img class="left-0 top-0 absolute rounded-3xl"
+                  src="assets/imgs/pages/img-05.png" /></a>
+              <div
+                class="px-[13px] py-[9px] left-[10px] top-[150px] absolute bg-neutral-0 dark:bg-neutral-dark-0 rounded-[26px] justify-center items-center gap-2.5 inline-flex">
+                <a href="category.html"
+                  class="text-neutral-950 dark:text-neutral-dark-950 text-sm font-medium">Community</a>
                 <div class="w-[22px] h-[22px] relative">
                   <div class="w-7 h-7 left-[-3px] top-[-3px] absolute bg-primary-light-950 rounded-full"></div>
 
