--- a/index.html
+++ b/index.html
@@ -121,11 +121,10 @@
                 </a>
               </h1>
               <ul class="py-6 mb-6 border-y border-neutral-300 dark:border-neutral-dark-300">
-                <li><a class="menu-mobile-item" href="page-about.html">Home</a></li>
-                <li><a class="menu-mobile-item" href="page-about.html">About</a></li>
-                <li><a class="menu-mobile-item" href="certification.html">Certification</a></li>
-                <li><a class="menu-mobile-item" href="category.html">News & Stories</a></li>
-                <li><a class="menu-mobile-item" href="page-contact.html">Contact</a></li>
+                <li class="relative"><a href="index.html" class="menu-item">Home</a></li>
+                <li class="relative"><a href="#about" class="menu-item">About Us</a></li>
+                <li class="relative"><a href="#news" class="menu-item">Latest News & Stories</a></li>
+                <li class="relative"><a href="#certification" class="menu-item">Certification</a></li>
               </ul>
               <div class="flex flex-wrap flex-col mt-4">
                 <h4 class="text-lg text-neutral-950 dark:text-neutral-dark-950 font-bold mb-4">Stay Connectted</h4>
