--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
       <h1 class="heading-1"><span
         class="font-light">Welcome to </span>GeNext.</h1>
 
-      <img src="assets/imgs/pages/img-29.png" alt="" class="mt-12 rounded-3xl">
+      <img src="assets/imgs/pages/img-29.webp" alt="" class="mt-12 rounded-3xl">
     </div>
   </section>
 
@@ -173,8 +173,8 @@
     <div class="container px-4">
       <div class="md:w-3/4 lg:w-1/2">
         <h1 class="heading-2 max-w-7xl mb-12 text-neutral-950 dark:text-neutral-dark-950"><span
-            class="font-light">Genext</span> Certification <span class="font-light">Certification goes</span><br> beyond
-          <span class="font-light">the ordinary.</span>
+            class="font-light">Genext</span> Certification <span class="font-light">goes beyond</span><br>
+          the ordinary.
         </h1>
         <p class="mb-8 text-base font-md text-neutral-950 dark:text-neutral-dark-950">We evaluate your entire social and
           environmental footprint—from your supply chain and input materials to charitable contributions and employee
@@ -237,28 +237,28 @@
         <div class="grid md:grid-cols-1 lg:grid-cols-2 gap-x-[30px] gap-y-[65px] max-w-[850px]">
           <div class="flex-col justify-start items-start gap-5 inline-flex hover-up">
             <a href="single.html" class="rounded-3xl overflow-hidden max-h-[606px]">
-              <img src="assets/imgs/pages/img-06.png" />
+              <img src="assets/imgs/pages/img-06.webp" />
             </a>
             <div class="flex-col justify-start items-start gap-3.5 flex">
               <div class="justify-start items-center gap-5 inline-flex">
                 <a href="category.html"
                   class="px-3 py-[8px] bg-neutral-200 dark:bg-neutral-dark-200 rounded-3xl border border-neutral-200 dark:border-neutral-dark-300 justify-center items-center gap-2.5 flex">
-                  <div class="text-neutral-900 dark:text-neutral-dark-950 text-sm font-medium leading-none">Trending
+                  <div class="text-neutral-900 dark:text-neutral-dark-950 text-sm font-medium leading-none">Latest
                   </div>
                 </a>
                 <div class="justify-start items-center gap-2 flex">
-                  <a href="author.html"><img class="w-9 h-9 rounded-3xl" src="assets/imgs/avatar/avatar-01.png" /></a>
+                  <a href="author.html"><img class="w-9 h-9 rounded-3xl" src="assets/imgs/avatar/avatar-01.webp" /></a>
                   <div class="text-neutral-700 text-sm font-medium leading-none dark:text-neutral-dark-700"><a
-                      href="author.html">John Wick</a> - June 8, 2024</div>
+                      href="author.html">James Murphy</a> - July 4, 2024</div>
                 </div>
               </div>
               <h3><a class="text-neutral-950 dark:text-neutral-dark-950 text-2xl font-bold leading-snug item-link"
-                  href="single.html">Urban Gardening: Growing Plants in the Concrete Jungle</a></h3>
+                  href="single.html">Supporting Local Business, Supporting Your Community</a></h3>
             </div>
           </div>
           <div class="flex-col justify-start items-start gap-5 inline-flex hover-up">
             <a href="single.html" class="rounded-3xl overflow-hidden max-h-[606px]">
-              <img src="assets/imgs/pages/img-07.png" />
+              <img src="assets/imgs/pages/method.webp" />
             </a>
             <div class="flex-col justify-start items-start gap-3.5 flex">
               <div class="justify-start items-center gap-5 inline-flex">
@@ -268,18 +268,18 @@
                   </div>
                 </a>
                 <div class="justify-start items-center gap-2 flex">
-                  <a href="author.html"><img class="w-9 h-9 rounded-3xl" src="assets/imgs/avatar/avatar-05.png" /></a>
+                  <a href="author.html"><img class="w-9 h-9 rounded-3xl" src="assets/imgs/avatar/avatar-01.webp" /></a>
                   <div class="text-neutral-700 text-sm font-medium leading-none dark:text-neutral-dark-700"><a
-                      href="author.html">John Wick</a> - June 8, 2024</div>
+                      href="author.html">James Murphy</a> - July 4, 2024</div>
                 </div>
               </div>
               <h3><a class="text-neutral-950 dark:text-neutral-dark-950 text-2xl font-bold leading-snug item-link"
-                  href="single.html">Health Tech Revolution: The Impact of Wearables</a></h3>
+                  href="single.html">The Genext Methodology</a></h3>
             </div>
           </div>
           <div class="flex-col justify-start items-start gap-5 inline-flex hover-up">
             <a href="single.html" class="rounded-3xl overflow-hidden max-h-[606px]">
-              <img src="assets/imgs/pages/img-08.png" />
+              <img src="assets/imgs/pages/forceforgood.webp" />
             </a>
             <div class="flex-col justify-start items-start gap-3.5 flex">
               <div class="justify-start items-center gap-5 inline-flex">
@@ -289,18 +289,19 @@
                   </div>
                 </a>
                 <div class="justify-start items-center gap-2 flex">
-                  <a href="author.html"><img class="w-9 h-9 rounded-3xl" src="assets/imgs/avatar/avatar-06.png" /></a>
+                  <a href="author.html"><img class="w-9 h-9 rounded-3xl" src="assets/imgs/avatar/avatar-01.webp" /></a>
                   <div class="text-neutral-700 text-sm font-medium leading-none dark:text-neutral-dark-700"><a
-                      href="author.html">John Wick</a> - June 8, 2024</div>
+                      href="author.html">James Murphy</a> - July 4, 2024</div>
                 </div>
               </div>
               <h3><a class="text-neutral-950 dark:text-neutral-dark-950 text-2xl font-bold leading-snug item-link"
-                  href="single.html">Advancements in 3D Printing: Shaping the Future</a></h3>
+                  href="single.html">
+                  Principles of Using Business as a Force for Good</a></h3>
             </div>
           </div>
           <div class="flex-col justify-start items-start gap-5 inline-flex hover-up">
             <a href="single.html" class="rounded-3xl overflow-hidden max-h-[606px]">
-              <img src="assets/imgs/pages/img-09.png" />
+              <img src="assets/imgs/pages/certified.webp" />
             </a>
             <div class="flex-col justify-start items-start gap-3.5 flex">
               <div class="justify-start items-center gap-5 inline-flex">
@@ -310,13 +311,14 @@
                   </div>
                 </a>
                 <div class="justify-start items-center gap-2 flex">
-                  <a href="author.html"><img class="w-9 h-9 rounded-3xl" src="assets/imgs/avatar/avatar-02.png" /></a>
+                  <a href="author.html"><img class="w-9 h-9 rounded-3xl" src="assets/imgs/avatar/avatar-01.webp" /></a>
                   <div class="text-neutral-700 text-sm font-medium leading-none dark:text-neutral-dark-700"><a
-                      href="author.html">John Wick</a> - June 8, 2024</div>
+                      href="author.html">James Murphy</a> - July 4, 2024</div>
                 </div>
               </div>
               <h3><a class="text-neutral-950 dark:text-neutral-dark-950 text-2xl font-bold leading-snug item-link"
-                  href="single.html">Globetrotting in Style: A Journey Through My Lens</a></h3>
+                  href="single.html">Genext: Certification that goes
+                  beyond the ordinary</a></h3>
             </div>
           </div>
 
@@ -372,7 +374,7 @@
 
           <!-- Banner box -->
           <div class="flex flex-col gap-4">
-            <h4 class="text-2xl text-neutral-950 font-bold dark:text-neutral-dark-950">Launch <span
+            <h4 class="text-2xl text-neutral-950 font-bold dark:text-neutral-dark-950">Launching <span
                 class="font-light">September 2024</span></h4>
             <div class="w-72 h-96 relative rounded-2xl">
               <img class="w-72 h-96 left-0 top-0 absolute rounded-2xl" src="assets/imgs/pages/banner1.png" />
@@ -440,11 +442,11 @@
           <div class="swiper-slide hover-up">
             <div class="w-full h-52 relative rounded-3xl overflow-hidden">
               <a href="category.html"><img class="left-0 top-0 absolute rounded-3xl"
-                  src="assets/imgs/pages/img-01.png" /></a>
+                  src="assets/imgs/pages/tech.webp" /></a>
               <div
                 class="px-[13px] py-[9px] left-[10px] top-[150px] absolute bg-neutral-0 dark:bg-neutral-dark-0 rounded-[26px] justify-center items-center gap-2.5 inline-flex">
                 <a href="category.html"
-                  class="text-neutral-950 dark:text-neutral-dark-950 text-sm font-medium">Eligibility</a>
+                  class="text-neutral-950 dark:text-neutral-dark-950 text-sm font-medium">Technology</a>
                 <div class="w-[22px] h-[22px] relative">
                   <div class="w-7 h-7 left-[-3px] top-[-3px] absolute bg-primary-light-950 rounded-full"></div>
 
@@ -455,11 +457,11 @@
           <div class="swiper-slide hover-up">
             <div class="w-full h-52 relative rounded-3xl overflow-hidden">
               <a href="category.html"><img class="left-0 top-0 absolute rounded-3xl"
-                  src="assets/imgs/pages/img-02.png" /></a>
+                  src="assets/imgs/pages/restaurant.webp" /></a>
               <div
                 class="px-[13px] py-[9px] left-[10px] top-[150px] absolute bg-neutral-0 dark:bg-neutral-dark-0 rounded-[26px] justify-center items-center gap-2.5 inline-flex">
                 <a href="category.html"
-                  class="text-neutral-950 dark:text-neutral-dark-950 text-sm font-medium">Pricing</a>
+                  class="text-neutral-950 dark:text-neutral-dark-950 text-sm font-medium">Hospitality</a>
                 <div class="w-[22px] h-[22px] relative">
                   <div class="w-7 h-7 left-[-3px] top-[-3px] absolute bg-primary-light-950 rounded-full"></div>
 
@@ -470,11 +472,11 @@
           <div class="swiper-slide hover-up">
             <div class="w-full h-52 relative rounded-3xl overflow-hidden">
               <a href="category.html"><img class="left-0 top-0 absolute rounded-3xl"
-                  src="assets/imgs/pages/img-03.png" /></a>
+                  src="assets/imgs/pages/professional.webp" /></a>
               <div
                 class="px-[13px] py-[9px] left-[10px] top-[150px] absolute bg-neutral-0 dark:bg-neutral-dark-0 rounded-[26px] justify-center items-center gap-2.5 inline-flex">
                 <a href="category.html"
-                  class="text-neutral-950 dark:text-neutral-dark-950 text-sm font-medium">Assessment</a>
+                  class="text-neutral-950 dark:text-neutral-dark-950 text-sm font-medium">Professional Services</a>
                 <div class="w-[22px] h-[22px] relative">
                   <div class="w-7 h-7 left-[-3px] top-[-3px] absolute bg-primary-light-950 rounded-full"></div>
 
@@ -485,11 +487,11 @@
           <div class="swiper-slide hover-up">
             <div class="w-full h-52 relative rounded-3xl overflow-hidden">
               <a href="category.html"><img class="left-0 top-0 absolute rounded-3xl"
-                  src="assets/imgs/pages/img-04.png" /></a>
+                  src="assets/imgs/pages/manufacturing.webp" /></a>
               <div
                 class="px-[13px] py-[9px] left-[10px] top-[150px] absolute bg-neutral-0 dark:bg-neutral-dark-0 rounded-[26px] justify-center items-center gap-2.5 inline-flex">
                 <a href="category.html"
-                  class="text-neutral-950 dark:text-neutral-dark-950 text-sm font-medium">Review</a>
+                  class="text-neutral-950 dark:text-neutral-dark-950 text-sm font-medium">Manufacturing</a>
                 <div class="w-[22px] h-[22px] relative">
                   <div class="w-7 h-7 left-[-3px] top-[-3px] absolute bg-primary-light-950 rounded-full"></div>
 
@@ -500,11 +502,11 @@
           <div class="swiper-slide hover-up">
             <div class="w-full h-52 relative rounded-3xl overflow-hidden">
               <a href="category.html"><img class="left-0 top-0 absolute rounded-3xl"
-                  src="assets/imgs/pages/img-05.png" /></a>
+                  src="assets/imgs/pages/retail.webp" /></a>
               <div
                 class="px-[13px] py-[9px] left-[10px] top-[150px] absolute bg-neutral-0 dark:bg-neutral-dark-0 rounded-[26px] justify-center items-center gap-2.5 inline-flex">
                 <a href="category.html"
-                  class="text-neutral-950 dark:text-neutral-dark-950 text-sm font-medium">Report</a>
+                  class="text-neutral-950 dark:text-neutral-dark-950 text-sm font-medium">Retail</a>
                 <div class="w-[22px] h-[22px] relative">
                   <div class="w-7 h-7 left-[-3px] top-[-3px] absolute bg-primary-light-950 rounded-full"></div>
 
@@ -515,11 +517,11 @@
           <div class="swiper-slide hover-up">
             <div class="w-full h-52 relative rounded-3xl overflow-hidden">
               <a href="category.html"><img class="left-0 top-0 absolute rounded-3xl"
-                  src="assets/imgs/pages/img-05.png" /></a>
+                  src="assets/imgs/pages/tourism.webp" /></a>
               <div
                 class="px-[13px] py-[9px] left-[10px] top-[150px] absolute bg-neutral-0 dark:bg-neutral-dark-0 rounded-[26px] justify-center items-center gap-2.5 inline-flex">
                 <a href="category.html"
-                  class="text-neutral-950 dark:text-neutral-dark-950 text-sm font-medium">Community</a>
+                  class="text-neutral-950 dark:text-neutral-dark-950 text-sm font-medium">Tourism</a>
                 <div class="w-[22px] h-[22px] relative">
                   <div class="w-7 h-7 left-[-3px] top-[-3px] absolute bg-primary-light-950 rounded-full"></div>
 
@@ -545,7 +547,7 @@
         <div class="pl-2 mb-8 md:mb-0 md:pl-0 md:max-w-[50%]">
           <h3
             class="text-3xl md:text-4xl lg:text-6xl font-bold text-neutral-950 dark:text-neutral-dark-950 leading-tight">
-            <span class="font-light">Subscribe to our monthly newsletter for priority</span> news, reviews and updates
+            <span class="font-light">Subscribe to The Beanstalk our monthly newsletter for lastest</span> news and stories.
           </h3>
         </div>
         <div class="mb-12 md:mb-0">
